2009-03-15  Ulrich Drepper  <drepper@redhat.com>

	[BZ #5807]
	* string/strlen.c (strlen): Fix omission in the expression to test
	for NUL bytes.

2009-03-14  Ulrich Drepper  <drepper@redhat.com>

	* crypt/sha256test.c (main): Perform 100,000 'a' test in a second way.

	* elf/dl-runtime.c (reloc_offset): Define.
	(reloc_index): Define.
	(_dl_fixup): Rename reloc_offset parameter to reloc_arg.
	(_dl_fixup_profile): Likewise.  Use reloc_index instead of
	computing index from reloc_offset.
	(_dl_call_pltexit): Likewise.
	* sysdeps/x86_64/dl-trampoline.S (_dl_runtime_resolve): Just pass
	the relocation index to _dl_fixup.
	(_dl_runtime_profile): Likewise for _dl_fixup_profile and
	_dl_call_pltexit.
	* sysdeps/x86_64/dl-runtime.c: New file.

	[BZ #9893]
	* sysdeps/x86_64/dl-trampoline.S (_dl_runtime_profile): Fix
	alignement of La_x86_64_regs.  Store xmm parameters.
	Patch mostly by Jiri Olsa <olsajiri@gmail.com>.

	[BZ #9913]
	* string/strverscmp.c (__strverscmp): Fix case of different digits
	in fractional part of string.
	Patch by Jingyu Liu <jyliu@fortinet.com>.
	* string/Makefile (tests): Add tst-svc2.
	* string/tst-svc2.c: New file.

	* string/strverscmp.c (__strverscmp): Optimize size of tables.

	* locale/iso-639.def: Add Min Nan.

2009-03-11  Carlos Eduardo Seo  <cseo@linux.vnet.ibm.com>

	[BZ #9948]
	* elf/dl-sysdep.c (_dl_show_auxv): Add support for AT_BASE_PLATFORM.

2009-03-14  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-sysdep.c (auxvars): Compress data structure.

	* sysdeps/i386/dl-machine.h (elf_machine_rel): Implement
	STT_GNU_IFUNC handling.
	(elf_machine_rela): Likewise.

2009-03-13  Ulrich Drepper  <drepper@redhat.com>

	* config.h.in (USE_MULTIARCH): Define.
	* configure.in: Handle --enable-multi-arch.
	* elf/dl-runtime.c (_dl_fixup): Handle STT_GNU_IFUNC.
	(_dl_fixup_profile): Likewise.
	* elf/do-lookup.c (dl_lookup_x): Likewise.
	* sysdeps/x86_64/dl-machine.h: Handle STT_GNU_IFUNC.
	* elf/elf.h (STT_GNU_IFUNC): Define.