@@ -188,7 +188,7 @@ day         "<U0069><U006C><U002D><U0126><U0061><U0064><U0064>";/
 abmon       "<U004A><U0061><U006E>";"<U0046><U0072><U0061>";/
             "<U004D><U0061><U0072>";"<U0041><U0070><U0072>";/
             "<U004D><U0065><U006A>";"<U0120><U0075><U006E>";/
-            "<U004C><U0075><U006C>";"<U0041><U0077><U0069>";/
+            "<U004C><U0075><U006C>";"<U0041><U0077><U0077>";/
             "<U0053><U0065><U0074>";"<U004F><U0074><U0074>";/
             "<U004E><U006F><U0076>";"<U0044><U0069><U010B>"
 %
@@ -200,7 +200,7 @@ mon         "<U004A><U0061><U006E><U006E><U0061><U0072>";/
             "<U004D><U0065><U006A><U006A><U0075>";/
             "<U0120><U0075><U006E><U006A><U0075>";/
             "<U004C><U0075><U006C><U006A><U0075>";/
-            "<U0041><U0077><U0069><U0073><U0073><U0075>";/
+            "<U0041><U0077><U0077><U0069><U0073><U0073><U0075>";/
             "<U0053><U0065><U0074><U0074><U0065><U006D><U0062><U0072><U0075>";/
             "<U004F><U0074><U0074><U0075><U0062><U0072><U0075>";/
             "<U004E><U006F><U0076><U0065><U006D><U0062><U0072><U0075>";/
