@@ -1,3 +1,9 @@
+2009-03-15  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #9891]
+	* locales/mt_MT: Fix spelling of August (Awwissu).
+	Patch by Martin Pitt.
+
 2009-03-14  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #9916]
